# luna

./: .env.example  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  __version__.py  cli.py  co-thinker-dev.sh  config.py  install.ps1  install.sh  lore-dev.sh  pyproject.toml  requirements.txt  setup.sh  test_ascii.ps1  test_crlf.ps1  test_git.ps1  test_remote.ps1
.github/workflows/: release.yml
api/: __init__.py  deps.py  server.py
api/routes/: agent.py  chat.py  config.py  files.py  ingest.py  sessions.py
app/: __init__.py  chat_engine.py  generator.py  ingest.py  parser.py  retriever.py  streamlit_app.py
core/: __init__.py  agent_approval.py  agent_contracts.py  agent_events.py  agent_executor.py  agent_modes.py  agent_plan_store.py  agent_planner.py  agent_runtime.py  agent_session.py  agent_tools.py  agent_workflow.py  chat_engine.py  chat_workflow.py  exceptions.py  file_catalog.py  generator.py  ingest.py  parser.py  project.py  retriever.py  runtime.py
crates/luna-agent-runtime/src/: tools.rs
scripts/: uninstall.sh
tests/: conftest.py  test_agent_approval.py  test_agent_contracts.py  test_agent_events.py  test_agent_session.py  test_agent_workflow.py  test_chat_engine.py  test_chat_workflow.py  test_cli_agent.py  test_cli_upgrade.py  test_config.py  test_file_catalog.py  test_generator.py  test_ingest.py  test_parser.py  test_retriever.py  test_runtime.py
tests/fixtures/docs/: code_sample.py  rag_intro.md
web/: __init__.py  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/app/(workspace)/: layout.tsx  page.tsx
web/app/(workspace)/chat/: page.tsx
web/app/(workspace)/chat/[sessionId]/: page.tsx
web/app/(workspace)/files/: page.tsx
web/app/(workspace)/settings/: page.tsx
web/components/chat/: ChatComposer.tsx  ChatMessages.tsx  SourcePanel.tsx
web/components/files/: FileTree.tsx
web/components/workspace/: ProjectSidebar.tsx  SettingsPanel.tsx
web/lib/: api.ts  chat-stream.ts  ws.ts
