[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "co-thinker"
dynamic = ["version"]
description = "基于 RAG 的本地知识问答系统"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Co-Thinker Contributors"},
]
keywords = ["rag", "knowledge-base", "qa", "streamlit", "deepseek"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Web UI
    "streamlit>=1.30.0",
    # LLM API
    "openai>=1.0.0",
    # CLI
    "typer>=0.9.0",
    # Env file
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/co-thinker"
Source = "https://github.com/your-org/co-thinker"

[project.scripts]
co-thinker = "cli:main"

[tool.setuptools.dynamic]
version = {attr = "__version__.__version__"}

[tool.setuptools]
py-modules = ["cli", "config", "__version__"]
packages = ["app"]

[tool.setuptools.package-data]
# 不包含 data/（用户自己的知识库）、vectorstore/、storage/（运行时生成）
# wheel 只包含 Python 代码
