[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "luna"
dynamic = ["version"]
description = "基于 RAG 的个人知识问答系统"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Luna Contributors"},
]
keywords = ["rag", "knowledge-base", "qa", "luna", "deepseek"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Web API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    # LLM API
    "openai>=1.0.0",
    # CLI
    "typer>=0.9.0",
    "pillow>=10.0.0",
    "pyfiglet>=1.0.0",
    # Env file
    "python-dotenv>=1.0.0",
    # Config
    "tomli-w>=1.0.0",
    # Document parsers
    "python-docx>=1.1.0",
    "pymupdf>=1.24.0",
    "python-pptx>=1.0.0",
    # Version comparison (used by `luna upgrade`)
    "packaging>=23.0",
]

[project.urls]
Homepage = "https://github.com/player-Muteki/luna"
Source = "https://github.com/player-Muteki/luna"

[project.scripts]
luna = "cli:main"
Luna = "cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.dynamic]
version = {attr = "__version__.__version__"}

[tool.setuptools]
py-modules = ["cli", "config", "__version__"]
packages = ["core", "api", "api.routes", "web"]

[tool.setuptools.package-data]
web = [
    "__init__.py",
    "app/**/*",
    "components/**/*",
    "lib/**/*",
    "public/**/*",
    "package.json",
    "package-lock.json",
    "next.config.js",
    "next-env.d.ts",
    "tsconfig.json",
    "tailwind.config.ts",
    "postcss.config.js",
    "globals.css",
]


